--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,7 +16,7 @@ classifiers = [
     "Topic :: Utilities"
 ]
 packages = [
-    { include = "pytest_spec2md" },
+    { include = "pytest-spec2md" },
     { include = "test", format = "sdist" },
 ]
 include = ["LICENSE"]
@@ -34,7 +34,7 @@ wheel = "*"
 twine = "*"
 
 [tool.poetry.plugins.pytest11]
-pytest_spec = "pytest_spec2md.plugin"
+pytest_spec = "pytest-spec2md.plugin"
 
 [build-system]
 requires = ["poetry>=0.12"]
