--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -40,8 +40,7 @@ jobs:
       run: |
         pip install pytest
         pip install pytest-cov
-        pip install pytest-asyncio
-        pytest -m "not device_needed" --cov-config=.coveragerc --cov-report html --cov=.
+        pytest test --cov-config=.coveragerc --cov-report html --cov=.
     - name: Fetching testcoverage results
       uses: actions/upload-artifact@v1
       with:
