--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,7 +24,8 @@ packages = [
 include = ["LICENSE"]
 
 [tool.poetry.dependencies]
-pytest = {version = ">7.0", python = ">3.8"}
+python = ">3.8"
+pytest = ">7.0"
 six = "*"
 
 [tool.poetry.dev-dependencies]
