--- a/.github/workflows/publish_to_test_pypi.yml
+++ b/.github/workflows/publish_to_test_pypi.yml
@@ -1,7 +1,9 @@
 name: Publish Python distributions to TestPyPI
 
 on:
-  push:
+  pull_request:
+    branches:
+      - main
 
 jobs:
   build-n-publish:
