--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,16 +1,18 @@
 [tool.poetry]
 name = "pytest-spec2md"
-version = "0.0.1"
-description = "Library pytest-spec2md is a pytest plugin to create a markdown specification."
+version = "0.1.2"
+description = "Library pytest-spec2md is a pytest plugin to create a markdown specification while running pytest."
 readme = "README.md"
 authors = ["mh7d"]
+maintainers = ["mh7d"]
 license = "GPL-2.0-or-later"
 homepage = "https://github.com/mh7d/pytest-spec2md"
 repository = "https://github.com/mh7d/pytest-spec2md"
-keywords = ["pytest", "test", "unittest", "spec"]
+keywords = ["pytest", "test", "unittest", "specification", "markdown"]
 classifiers = [
     "Programming Language :: Python :: 3.8",
     "Programming Language :: Python :: 3.9",
+    "Programming Language :: Python :: 3.10",
     "Topic :: Software Development :: Libraries",
     "Topic :: Software Development :: Testing",
     "Topic :: Utilities"
@@ -22,16 +24,14 @@ packages = [
 include = ["LICENSE"]
 
 [tool.poetry.dependencies]
+python = ">3.8"
+pytest = ">7.0"
 six = "*"
 
 [tool.poetry.dev-dependencies]
 mock = ">1.0.1"
-pytest = "*"
-pytest-describe = "*"
-pytest-flake8 = "*"
+pytest = ">7.0"
 pytest-cov = "*"
-wheel = "*"
-twine = "*"
 
 [tool.poetry.plugins.pytest11]
 pytest_spec = "pytest_spec2md.plugin"
